# NormalProgramming

./: .gitignore  .gitmodules  README.md
CLH/: Makefile  main.cpp
SpinLockAlgo/: Makefile  RingBufLock.hpp  TAS.hpp  TTAS.hpp  TicketLock.hpp  atomic_lib.hpp  main.cpp  plot_res.py  res_RB_LOCK  res_TAS  res_TICKET_LOCK  res_TTAS
SplitOrderedList/: CMakeLists.txt  plot.py
SplitOrderedList/result/: result
SplitOrderedList/src/: HazardPointer.hpp  List.hpp  MarkedPointers.hpp  SplitOrderedList.hpp  SplitOrderedList_copy.hpp  main.cpp
Stack/: CMakeLists.txt  main.cpp
StealWorkers/: Makefile  main.cpp
cache/: caches.cpp  main.cpp  model.py  plot.py  res  tmp
matrix/: .editorconfig  CMakeLists.txt  README.md  plot.py  res_native
matrix/results/: native  perf_test  time_cachelike  time_cachelike_parallel  time_native  time_native_parallel
matrix/scripts/: disable_throttling.sh  plot.py
matrix/src/: graphics.cpp  main.cpp  matrix.h  matrix_cachelike.h  matrix_cachelike_parallel.h  matrix_native.h  matrix_native_parallel.h  matrix_tr.h  other_func.hpp  perf_test.h  print_lib.hpp  qmatrix.h
matrix/src/tests/: test_cl.cpp  test_cl_clpl.cpp  test_common.h  test_mc.cpp  test_mc_tr.cpp
